--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -3,5 +3,18 @@ html(lang="en")
 head
 	meta(charset="UTF-8")
 	title SuperAprendo
+	meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
+	link(rel="stylesheet", href="css/fontawesome-all.min.css")
+	link(rel="stylesheet", href="css/estilos.css")
 body
+	section.portada
+		.margen
+			header.header
+				figure.logo
+					img.imagen(src="img/logo.png", alt="fondo")
+				.copy
+					h1.title Aprendo con tus personajes favoritos
+					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore inventore eligendi nulla quibusdam mollitia consectetur ducimus illo cumque consequuntur.
+					a.btn(href="#") Entra a tu primera clase
+				.fondo
 	
