Maquetacion como trabajamos del landing

--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -17,4 +17,21 @@ body
 					p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore inventore eligendi nulla quibusdam mollitia consectetur ducimus illo cumque consequuntur.
 					a.btn(href="#") Entra a tu primera clase
 				.fondo
+	section.trabajamos
+		.margen
+			h2.title Como trabajamos
+			p.descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima corporis natus facilis molestias totam eligendi repudiandae nostrum? Incidunt dicta quibusdam, repudiandae, molestiae quos esse quia, nobis culpa quo ex nam natus aperiam! Dolore temporibus atque, ipsa.
+			.grid
+				.item
+					img(src="img/ver-clase.png", alt="ver clase")
+					p.informacion Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				.item
+					img(src="img/certificado.png", alt="certificado")
+					p.informacion Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				.item
+					img(src="img/contacto-empresa.png", alt="contacto empresa")
+					p.informacion Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+				.item
+					img(src="img/hacer-trabao.png", alt="hacer el trabajo")
+					p.informacion Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 	
