Maquetacion de cursos del landing

--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -34,4 +34,104 @@ body
 				.item
 					img(src="img/hacer-trabao.png", alt="hacer el trabajo")
 					p.informacion Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+	section.cursos
+		.margen
+			h2.title Encuentra el curso correcto para ti
+			ul.menu
+				li
+					a(href="#") Aplicar ahora
+			.grid
+				.item
+					img(src="img/curso-01.jpg", alt="curso 01")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-02.jpg", alt="curso 02")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-03.jpg", alt="curso 03")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-04.jpg", alt="curso 04")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+					img(src="img/curso-01.jpg", alt="curso 01")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-02.jpg", alt="curso 02")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-03.jpg", alt="curso 03")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-04.jpg", alt="curso 04")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+					img(src="img/curso-01.jpg", alt="curso 01")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-02.jpg", alt="curso 02")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-03.jpg", alt="curso 03")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-04.jpg", alt="curso 04")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+					img(src="img/curso-01.jpg", alt="curso 01")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-02.jpg", alt="curso 02")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-03.jpg", alt="curso 03")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
+				.item
+					img(src="img/curso-04.jpg", alt="curso 04")
+					.hover
+						h3.curso Desarrollo Web Online
+						p.descripcion
+						a.btn(href="#") Ir al curso
 	
