--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -134,4 +134,20 @@ body
 						h3.curso Desarrollo Web Online
 						p.descripcion
 						a.btn(href="#") Ir al curso
+	section.objetivos
+		.margen
+			h2.title Objetivos Principales
+			.objetivo
+				span.numero 01
+				ul.menu
+					li.item
+						a(href="#") 1
+					li.item
+						a(href="#") 2
+					li.item
+						a(href="#") 3
+				.imagen
+					img(src="img/triste.jpg", alt="triste")
+				p.descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga pariatur omnis doloribus aspernatur, veniam mollitia, nam! Enim illum ab vel doloribus. Nesciunt, ex, ducimus.
+				a.btn(href="#") Ir a los cursos
 	
