Maquetacion de profesores del landing

--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -150,4 +150,38 @@ body
 					img(src="img/triste.jpg", alt="triste")
 				p.descripcion Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga pariatur omnis doloribus aspernatur, veniam mollitia, nam! Enim illum ab vel doloribus. Nesciunt, ex, ducimus.
 				a.btn(href="#") Ir a los cursos
+	section.profesores
+		.margen
+			h2.title Conoce a tu profesores
+			.grid
+				.item
+					.header
+						.img
+							img.portada(src="", alt="")
+						.perfil
+							img.foto(src="img/perfil-01.jpg", alt="profesor 01")
+					.body
+						h3.profesor Chris Evans
+						span.cargo Frontend Developer
+						a.btn(href="#") Ver perfil
+				.item
+					.header
+						.img
+							img.portada(src="", alt="")
+						.perfil
+							img.foto(src="img/perfil-02.jpg", alt="profesor 02")
+					.body
+						h3.profesor Robert Dawney Jr.
+						span.cargo Frontend Developer
+						a.btn(href="#") Ver perfil
+				.item
+					.header
+						.img
+							img.portada(src="", alt="")
+						.perfil
+							img.foto(src="img/perfil-03.jpg", alt="profesor 03")
+					.body
+						h3.profesor Scarlett Johansson
+						span.cargo Frontend Developer
+						a.btn(href="#") Ver perfil
 	
