Maquetacion de contacto del landing

--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -184,4 +184,43 @@ body
 						h3.profesor Scarlett Johansson
 						span.cargo Frontend Developer
 						a.btn(href="#") Ver perfil
+	section.contacto
+		.margen
+			.grid
+				.item
+					.triangulo
+					.titulo
+						h2.title Contactanos
+					form.formulario
+						input#nombre.input(type="text", name="nombre",placeholder="Nombre")
+						input#correo.input(type="email", name="correo", placeholder="Correo")
+						input#correo.input(type="text", name="Asunto", placeholder="Asunto")
+						textarea#mensae.textarea(name="mensaje", cols="30", rows="10",placeholder="Mensaje")
+						input(type="submit", value="Enviar")
+				.item
+					h2.title Más Información
+					p.descripcion  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quae neque ullam hic, totam nemo explicabo esse tempora, mollitia voluptatem illum rem earum, itaque porro animi expedita quia. Beatae, nulla.
+					ul.datos
+						li.item
+							span.fas.fa-phone
+							span.info 0424-1234567
+						li.item
+							span.fas.fa-envelope
+							span.info superaprendo@gmail.com
+						li.item
+							span.fas.fa-map-marker-alt
+							span.info Monagas Maturín Av Bolivar
+					ul.social
+						li.item
+							a(href="#")
+								span.fab.fa-facebook
+						li.item
+							a(href="#")
+								span.fab.fa-twitter
+						li.item
+							a(href="#")
+								span.fab.fa-instagram
+						li.item
+							a(href="#")
+								span.fab.fa-youtube
 	
